Make nav bar wider to avoid text wrapping.

--- a/_sass/color_schemes/omop.scss
+++ b/_sass/color_schemes/omop.scss
@@ -1,3 +1,3 @@
 $link-color: #3e5fb2;
 $content-width: 75rem;
-$nav-width: 17rem;
+$nav-width: 20rem;
